# carbon-white

./: .containerignore  .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
assets/: site.webmanifest
src/: api.rs  app.rs  auth.rs  database.rs  file_server.rs  lib.rs  main.rs  shared.rs
src/components/: header.rs  mod.rs
src/pages/: edit.rs  footer.rs  home.rs  login.rs  mod.rs  submit.rs
style/: main.scss
